Think I fixed book list spacing

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -253,7 +253,7 @@ table {
   
   td, th {
       border: 0 transparent;
-      padding: ($spacing-unit / 3) ($spacing-unit / 2);
+      padding: ($spacing-unit / 3);
   }
 }
 
